# graphiq

./: .gitignore  Cargo.toml  DESIGN.md  README.md  ROADMAP-AFMO-V2.md  ROADMAP-HRR.md  ROADMAP-PHASE3.md  ROADMAP-PHASE4.md  ROADMAP-PHASE6.md  ROADMAP-SPECTRAL.md  ROADMAP.md  install.sh  signetai
.github/workflows/: auto-release.yml  release.yml
apps/desktop/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
apps/desktop/src/main/: graphiq-service.ts  index.ts
apps/desktop/src/preload/: index.ts
benches/: baseline-esbuild.json  baseline-signetai.json  baseline-tokio.json  baseline-v6-esbuild.json  baseline-v6-signetai.json  baseline-v6-tokio.json  esbuild-mrr-v2.json  esbuild-queries.json  locomo-full-stack-8-esbuild.json  locomo-hard-esbuild.json  locomo-hard-tokio.json  locomo-self.json  locomo-tokio.json  mrr-10-esbuild.json  mrr-10-signetai.json  mrr-10-tokio.json  mrr-20-esbuild.json  mrr-20-flask.json  mrr-20-junit5.json  mrr-20-signetai.json  mrr-20-tokio.json  mrr-25-esbuild.json  mrr-25-signetai.json  mrr-25-tokio.json  mrr-30-esbuild.json  mrr-30-signetai.json  mrr-30-tokio.json  mrr-50-esbuild.json  mrr-50-signetai.json  mrr-50-tokio.json  ndcg-10-esbuild.json  ndcg-10-signetai.json  ndcg-10-tokio.json  ndcg-20-esbuild.json  ndcg-20-flask.json  ndcg-20-junit5.json  ndcg-20-signetai.json  ndcg-20-tokio.json  ndcg-50-esbuild.json  ndcg-50-signetai.json  (+7 more)
benches/demo-codebase/: auth_middleware.ts  cache_manager.py  pipeline.go  rate_limiter.rs
benches/queries/archive/: diagnostic-esbuild.json  esbuild-medium.json  esbuild-mrr-v1.json  esbuild-ndcg-v2.json  esbuild-ndcg-v3.json  locomo-esbuild.json  locomo-full-stack-8-tokio.json  locomo-full-stack-8.json  locomo-hard-signetai.json  locomo-signetai.json  mrr-30-demo.json  signetai-medium.json  signetai-mrr-v3.json  signetai-ndcg-v2.json  signetai-ndcg-v3.json  signetai-ndcg-v4.json  signetai-queries.json  tokio-medium.json  tokio-mrr-v1.json  tokio-mrr-v3.json  tokio-ndcg-v3.json  tokio-ndcg-v4.json  tokio-queries.json
crates/graphiq-bench/: Cargo.toml
crates/graphiq-bench/src/: diagnostic.rs  locomo.rs  main.rs
crates/graphiq-cli/: AGENTS.md.template  Cargo.toml
crates/graphiq-cli/src/: main.rs
crates/graphiq-core/: Cargo.toml
crates/graphiq-core/src/: af26.rs  afmo.rs  artifact_cache.rs  behavioral.rs  blast.rs  briefing.rs  cache.rs  calls.rs  chunker.rs  cruncher.rs  db.rs  dead_code.rs  decompose.rs  deep_graph.rs  directory_expand.rs  edge.rs  edge_evidence.rs  embed.rs  evidence.rs  file_router.rs  files.rs  fts.rs  graph.rs  holo.rs  holo_name.rs  hrr.rs  hrr_v2.rs  hypergraph.rs  index.rs  lib.rs  lsa.rs  manifest.rs  motifs.rs  numeric_bridges.rs  pipeline.rs  qhrr.rs  query_family.rs  query_plan.rs  rerank.rs  role_query.rs  (+17 more)
crates/graphiq-core/src/languages/: c.rs  cpp.rs  css.rs  go.rs  html.rs  java.rs  json.rs  mod.rs  python.rs  ruby.rs  rust.rs  toml.rs  typescript.rs  yaml.rs
crates/graphiq-mcp/: Cargo.toml
crates/graphiq-mcp/src/: main.rs
docs/: DESIGN-LSA.md  ROADMAP-HRR.md  ROADMAP-PHASE6.md  ROADMAP-V2.md  ROADMAP.md  SIMPLIFICATION-SPEC.md  SPEC-V3-HOLO-ENHANCED.md  UNIFIED-PIPELINE-ROADMAP.md  benchmarks.md  contributing.md  how-graphiq-works.md  how-heat-kernel-works.md  how-holographic-matching-works.md  how-predictive-scoring-works.md  how-scoring-works.md  how-seed-generation-works.md  research.md  retrieval.md  signet-plugin.md  supported-harnesses.md
docs/archive/: DESIGN-LSA.md  ROADMAP-FINISHING.md  ROADMAP-PHASE2.md  ROADMAP-PHASE3.md  ROADMAP-PHASE5.md  ROADMAP-PHASE6.md  ROADMAP.md  UNIFIED-PIPELINE-SPEC.md
docs/specs/: roadmap-v4.md  signet-integration-v4.md
signet-plugin/: integration.json  manifest.json
skills/graphiq/: SKILL.md
(+5 files in other folders)
