[package]
name = "graphiq-bench"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "graphiq-bench"
path = "src/main.rs"

[[bin]]
name = "graphiq-locomo"
path = "src/locomo.rs"

[[bin]]
name = "graphiq-diag"
path = "src/diagnostic.rs"

[features]
default = []
embed = ["graphiq-core/embed"]

[dependencies]
graphiq-core = { path = "../graphiq-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
