[package]
name = "graphiq-cli"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "graphiq"
path = "src/main.rs"

[dependencies]
graphiq-core = { path = "../graphiq-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
dirs = "6"
regex = "1"

[features]
default = []
embed = ["graphiq-core/embed"]
