[package]
name = "graphiq-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
ignore = "0.4"
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.6"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
regex = "1"
dashmap = "6.1.0"
lru = "0.17.0"

[dev-dependencies]
tempfile = "3"
