[package]
name = "graphiq-core"
version = "3.2.1"
edition = "2021"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
zstd = "0.13"
rayon = "1.10"
ignore = "0.4"
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.6"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
regex = "1"
dashmap = "6.1.0"
lru = "0.17.0"

candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.5", default-features = true, optional = true }

llama-cpp-2 = { version = "0.1", optional = true }
dirs = { version = "6", optional = true }
ureq = { version = "3", optional = true }

[features]
default = []
embed-candle = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
embed = ["llama-cpp-2", "dirs", "ureq"]

[dev-dependencies]
tempfile = "3"
